-- Cookfeed reference schema (PostgreSQL 16+).
-- This is a hand-written, readable equivalent of what `dotnet ef migrations add InitialCreate`
-- generates from CookfeedDbContext. The EF migration is the source of truth for deployment;
-- this file exists so the schema can be read without opening C#.

CREATE TABLE users (
    id            integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    email         varchar(254) NOT NULL,
    display_name  varchar(80)  NOT NULL,
    password_hash varchar(255) NOT NULL,
    created_at    timestamptz  NOT NULL DEFAULT now()
);
CREATE UNIQUE INDEX ix_users_email ON users (email);

CREATE TABLE roles (
    id   integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name varchar(40) NOT NULL
);
CREATE UNIQUE INDEX ix_roles_name ON roles (name);

CREATE TABLE user_roles (
    user_id    integer NOT NULL REFERENCES users (id) ON DELETE CASCADE,
    role_id    integer NOT NULL REFERENCES roles (id) ON DELETE RESTRICT,
    granted_at timestamptz NOT NULL DEFAULT now(),
    PRIMARY KEY (user_id, role_id)
);
CREATE INDEX ix_user_roles_role_id ON user_roles (role_id);

CREATE TABLE creator_profiles (
    user_id     integer PRIMARY KEY REFERENCES users (id) ON DELETE CASCADE,   -- shared PK: 1:1
    handle      varchar(40) NOT NULL,
    bio         varchar(1000),
    avatar_url  varchar(500),
    is_verified boolean NOT NULL,
    CONSTRAINT ck_creator_profiles_handle_slug CHECK (handle ~ '^[a-z0-9]+(?:-[a-z0-9]+)*$')
);
CREATE UNIQUE INDEX ix_creator_profiles_handle ON creator_profiles (handle);

CREATE TABLE recipes (
    id            integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    creator_id    integer NOT NULL REFERENCES creator_profiles (user_id) ON DELETE CASCADE,
    title         varchar(120) NOT NULL,
    description   varchar(2000),
    video_url     varchar(500) NOT NULL,
    thumbnail_url varchar(500),
    servings      integer NOT NULL,
    prep_minutes  integer,
    cook_minutes  integer,
    is_published  boolean NOT NULL,
    created_at    timestamptz NOT NULL DEFAULT now(),
    published_at  timestamptz,
    save_count    integer NOT NULL DEFAULT 0,          -- denormalized counter, see design doc §5
    CONSTRAINT ck_recipes_servings_positive    CHECK (servings > 0),
    CONSTRAINT ck_recipes_published_has_date   CHECK (is_published = false OR published_at IS NOT NULL)
);
CREATE INDEX ix_recipes_creator_id                ON recipes (creator_id);
CREATE INDEX ix_recipes_is_published_published_at ON recipes (is_published, published_at DESC);
CREATE INDEX ix_recipes_is_published_save_count   ON recipes (is_published, save_count DESC);

CREATE TABLE recipe_steps (
    id                      integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    recipe_id               integer NOT NULL REFERENCES recipes (id) ON DELETE CASCADE,
    step_number             integer NOT NULL,
    instruction             varchar(2000) NOT NULL,
    video_timestamp_seconds integer,
    duration_minutes        integer,
    CONSTRAINT ck_recipe_steps_number_positive CHECK (step_number > 0)
);
CREATE UNIQUE INDEX ix_recipe_steps_recipe_id_step_number ON recipe_steps (recipe_id, step_number);

CREATE TABLE units (
    id             integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name           varchar(40) NOT NULL,
    abbreviation   varchar(10) NOT NULL,
    category       varchar(10) NOT NULL,               -- 'Volume' | 'Mass' | 'Count'
    to_base_factor numeric(12,6) NOT NULL,             -- to ml / g / 1
    is_metric      boolean NOT NULL,
    CONSTRAINT ck_units_factor_positive CHECK (to_base_factor > 0)
);
CREATE UNIQUE INDEX ix_units_name         ON units (name);
CREATE UNIQUE INDEX ix_units_abbreviation ON units (abbreviation);

CREATE TABLE ingredients (
    id                         integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name                       varchar(80) NOT NULL,   -- canonical, lower-case
    category                   varchar(20) NOT NULL,   -- aisle grouping
    density_g_per_ml           numeric(8,4),           -- enables Volume -> Mass conversion
    preferred_shopping_unit_id integer REFERENCES units (id) ON DELETE SET NULL,
    CONSTRAINT ck_ingredients_density_positive CHECK (density_g_per_ml IS NULL OR density_g_per_ml > 0)
);
CREATE UNIQUE INDEX ix_ingredients_name ON ingredients (name);
CREATE INDEX ix_ingredients_preferred_shopping_unit_id ON ingredients (preferred_shopping_unit_id);

CREATE TABLE recipe_ingredients (
    id            integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    recipe_id     integer NOT NULL REFERENCES recipes (id)     ON DELETE CASCADE,
    ingredient_id integer NOT NULL REFERENCES ingredients (id) ON DELETE RESTRICT,
    unit_id       integer NOT NULL REFERENCES units (id)       ON DELETE RESTRICT,
    quantity      numeric(10,3) NOT NULL,
    display_text  varchar(120),                        -- creator's wording, display only
    preparation   varchar(80),
    sort_order    integer NOT NULL,
    is_optional   boolean NOT NULL,
    CONSTRAINT ck_recipe_ingredients_quantity_positive CHECK (quantity > 0)
);
CREATE INDEX ix_recipe_ingredients_recipe_id_sort_order ON recipe_ingredients (recipe_id, sort_order);
CREATE INDEX ix_recipe_ingredients_ingredient_id        ON recipe_ingredients (ingredient_id);
CREATE INDEX ix_recipe_ingredients_unit_id              ON recipe_ingredients (unit_id);

CREATE TABLE saved_recipes (
    user_id   integer NOT NULL REFERENCES users (id)   ON DELETE CASCADE,
    recipe_id integer NOT NULL REFERENCES recipes (id) ON DELETE CASCADE,
    saved_at  timestamptz NOT NULL DEFAULT now(),
    PRIMARY KEY (user_id, recipe_id)
);
CREATE INDEX ix_saved_recipes_recipe_id ON saved_recipes (recipe_id);

CREATE TABLE meal_plans (
    id         integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id    integer NOT NULL REFERENCES users (id) ON DELETE CASCADE,
    name       varchar(80) NOT NULL,
    week_start date NOT NULL,
    created_at timestamptz NOT NULL DEFAULT now()
);
CREATE UNIQUE INDEX ix_meal_plans_user_id_week_start ON meal_plans (user_id, week_start);

CREATE TABLE meal_plan_entries (
    id                integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    meal_plan_id      integer NOT NULL REFERENCES meal_plans (id) ON DELETE CASCADE,
    recipe_id         integer NOT NULL REFERENCES recipes (id)    ON DELETE CASCADE,
    planned_date      date NOT NULL,
    slot              varchar(10) NOT NULL,              -- Breakfast | Lunch | Dinner | Snack
    servings_override integer,
    CONSTRAINT ck_meal_plan_entries_servings_positive CHECK (servings_override IS NULL OR servings_override > 0)
);
CREATE INDEX ix_meal_plan_entries_meal_plan_id_planned_date_slot ON meal_plan_entries (meal_plan_id, planned_date, slot);
CREATE INDEX ix_meal_plan_entries_recipe_id ON meal_plan_entries (recipe_id);

CREATE TABLE products (
    id              integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    creator_id      integer NOT NULL REFERENCES creator_profiles (user_id) ON DELETE CASCADE,
    type            varchar(20) NOT NULL,                -- RecipeCollection | MealPlan
    title           varchar(120) NOT NULL,
    description     varchar(2000),
    cover_image_url varchar(500),
    price_cents     integer NOT NULL,
    currency        varchar(3) NOT NULL,
    is_active       boolean NOT NULL,
    created_at      timestamptz NOT NULL DEFAULT now(),
    CONSTRAINT ck_products_price_nonnegative CHECK (price_cents >= 0)
);
CREATE INDEX ix_products_creator_id_is_active ON products (creator_id, is_active);

CREATE TABLE product_recipes (
    product_id integer NOT NULL REFERENCES products (id) ON DELETE CASCADE,
    recipe_id  integer NOT NULL REFERENCES recipes (id)  ON DELETE RESTRICT,
    sort_order integer NOT NULL,
    day_offset integer,                                  -- 0..6 for MealPlan products
    slot       varchar(10),
    PRIMARY KEY (product_id, recipe_id),
    CONSTRAINT ck_product_recipes_day_offset_range CHECK (day_offset IS NULL OR (day_offset BETWEEN 0 AND 6))
);
CREATE INDEX ix_product_recipes_recipe_id ON product_recipes (recipe_id);

CREATE TABLE cart_items (
    user_id    integer NOT NULL REFERENCES users (id)    ON DELETE CASCADE,
    product_id integer NOT NULL REFERENCES products (id) ON DELETE CASCADE,
    added_at   timestamptz NOT NULL DEFAULT now(),
    PRIMARY KEY (user_id, product_id)
);
CREATE INDEX ix_cart_items_product_id ON cart_items (product_id);

CREATE TABLE orders (
    id                integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id           integer NOT NULL REFERENCES users (id) ON DELETE RESTRICT,   -- never lose financial history
    status            varchar(12) NOT NULL,              -- Pending | Paid | Refunded | Cancelled
    placed_at         timestamptz NOT NULL DEFAULT now(),
    paid_at           timestamptz,
    total_cents       integer NOT NULL,                  -- denormalized, see design doc §5
    currency          varchar(3) NOT NULL,
    payment_reference varchar(100),
    CONSTRAINT ck_orders_total_nonnegative CHECK (total_cents >= 0)
);
CREATE INDEX ix_orders_user_id_placed_at ON orders (user_id, placed_at DESC);

CREATE TABLE order_items (
    id               integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    order_id         integer NOT NULL REFERENCES orders (id)   ON DELETE CASCADE,
    product_id       integer NOT NULL REFERENCES products (id) ON DELETE RESTRICT,
    creator_id       integer NOT NULL,                   -- snapshot of products.creator_id at checkout
    product_title    varchar(120) NOT NULL,              -- snapshot
    unit_price_cents integer NOT NULL,                   -- snapshot
    CONSTRAINT ck_order_items_price_nonnegative CHECK (unit_price_cents >= 0)
);
CREATE UNIQUE INDEX ix_order_items_order_id_product_id ON order_items (order_id, product_id);
CREATE INDEX ix_order_items_product_id ON order_items (product_id);
CREATE INDEX ix_order_items_creator_id ON order_items (creator_id);
